--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,4 +1,6 @@
 
+<button pButton type="button" label="Tüm Ligi Oynat" (click)="playAll()" class="ml-2"></button>
+
 <h2>{{ currentWeek }}. Hafta Maç Sonuçları</h2>
 <ul>
   <li *ngFor="let match of currentMatches$ | async">
