--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,16 +1,16 @@
-
 <button pButton type="button" label="Tüm Ligi Oynat" (click)="playAll()" class="ml-2"></button>
 
 <h2>{{ currentWeek }}. Hafta Maç Sonuçları</h2>
 <ul>
   <li *ngFor="let match of currentMatches$ | async">
-    {{ match.homeTeam.name }} {{ match.homeGoals }} - {{ match.awayGoals }} {{ match.awayTeam.name }}
+    {{ getTeamName(match.homeTeamId) }} {{ match.homeGoals }} - {{ match.awayGoals }} {{ getTeamName(match.awayTeamId) }}
   </li>
 </ul>
 
 <button pButton type="button" label="Sonraki Hafta" (click)="playNextWeek()"></button>
 
-<p-table [value]="(teams$ | async)!" [responsiveLayout]="'scroll'">
+<div *ngIf="teams$ | async as teams">
+  <p-table [value]="teams" [responsiveLayout]="'scroll'" >
   <ng-template pTemplate="header">
     <tr>
       <th>Takım</th>
@@ -25,10 +25,10 @@
 
   <ng-template pTemplate="body" let-team>
     <tr
-    [ngStyle]="{
-      'background-color': championChances.get(team.id) === 0 ? '#ffe5e5' : 'transparent'
-    }"
-    [title]="championChances.get(team.id) === 0 ? 'Şampiyonluk şansı kalmadı' : ''"
+      [ngStyle]="{
+        'background-color': championChances.get(team.id) === 0 ? '#ffe5e5' : 'transparent'
+      }"
+      [title]="championChances.get(team.id) === 0 ? 'Şampiyonluk şansı kalmadı' : ''"
     >
       <td>{{ team.name }}</td>
       <td>{{ team.matchesPlayed }}</td>
@@ -40,9 +40,7 @@
     </tr>
   </ng-template>
 </p-table>
-
-
-
+</div>
 <div *ngIf="championPredictions$ | async as predictions">
   <h3>{{ currentWeek }}. Hafta Şampiyonluk Tahminleri</h3>
   <p-table [value]="predictions">
@@ -59,4 +57,40 @@
       </tr>
     </ng-template>
   </p-table>
+</div>
+
+<h3 class="mt-4">Oynanmış Maçları Düzenle</h3>
+
+<div *ngIf="editableMatches$ | async as matches">
+  <div
+    *ngFor="let match of matches"
+    style="margin-bottom: 10px; display: flex; align-items: center"
+  >
+    <span style="width: 140px">{{ getTeamName(match.homeTeamId) }}</span>
+
+    <input
+      type="number"
+      [(ngModel)]="match.homeGoals"
+      style="width: 40px; text-align: center"
+      min="0"
+    />
+
+    <span style="margin: 0 8px">-</span>
+
+    <input
+      type="number"
+      [(ngModel)]="match.awayGoals"
+      style="width: 40px; text-align: center"
+      min="0"
+    />
+
+    <span style="width: 140px; margin-left: 8px">{{ getTeamName(match.awayTeamId) }}</span>
+
+    <button
+      pButton
+      icon="pi pi-check"
+      class="p-button-sm p-button-success ml-2"
+      (click)="editMatch(match)"
+    ></button>
+  </div>
 </div>
