--- a/src/app/league-table/league-table.component.html
+++ b/src/app/league-table/league-table.component.html
@@ -1,49 +1,59 @@
-<button pButton type="button" label="Tüm Ligi Oynat" (click)="playAll()" class="ml-2"></button>
+<!-- Tüm Ligi Oynat Butonu -->
+<div class="toolbar">
+  <button pButton type="button" (click)="playAll()" class="p-button-primary">Tüm Ligi Oynat</button>
+</div>
 
-<h2>{{ currentWeek }}. Hafta Maç Sonuçları</h2>
-<ul>
+<!-- Maç Sonuçları -->
+<h2 class="section-title">{{ currentWeek }}. Hafta Maç Sonuçları</h2>
+<ul class="match-results">
   <li *ngFor="let match of currentMatches$ | async">
-    {{ getTeamName(match.homeTeamId) }} {{ match.homeGoals }} - {{ match.awayGoals }} {{ getTeamName(match.awayTeamId) }}
+    <span class="team-name">{{ getTeamName(match.homeTeamId) }}</span>
+    <span class="score">{{ match.homeGoals }} - {{ match.awayGoals }}</span>
+    <span class="team-name">{{ getTeamName(match.awayTeamId) }}</span>
   </li>
 </ul>
 
-<button pButton type="button" label="Sonraki Hafta" (click)="playNextWeek()"></button>
-
-<div *ngIf="teams$ | async as teams">
-  <p-table [value]="teams" [responsiveLayout]="'scroll'" >
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Takım</th>
-      <th>O</th>
-      <th>G</th>
-      <th>B</th>
-      <th>M</th>
-      <th>Av.</th>
-      <th>Puan</th>
-    </tr>
-  </ng-template>
-
-  <ng-template pTemplate="body" let-team>
-    <tr
-      [ngStyle]="{
-        'background-color': championChances.get(team.id) === 0 ? '#ffe5e5' : 'transparent'
-      }"
-      [title]="championChances.get(team.id) === 0 ? 'Şampiyonluk şansı kalmadı' : ''"
-    >
-      <td>{{ team.name }}</td>
-      <td>{{ team.matchesPlayed }}</td>
-      <td>{{ team.wins }}</td>
-      <td>{{ team.draws }}</td>
-      <td>{{ team.losses }}</td>
-      <td>{{ team.goalDifference }}</td>
-      <td>{{ team.points }}</td>
-    </tr>
-  </ng-template>
-</p-table>
+<!-- Sonraki Hafta Butonu -->
+<div class="toolbar">
+  <button pButton type="button" label="Sonraki Hafta" (click)="playNextWeek()" class="p-button-outlined">Sonraki Hafta</button>
 </div>
+
+<!-- Takımlar Tablosu -->
+<div *ngIf="teams$ | async as teams">
+  <p-table [value]="teams" [responsiveLayout]="'scroll'" class="team-table">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Takım</th>
+        <th>O</th>
+        <th>G</th>
+        <th>B</th>
+        <th>M</th>
+        <th>Av.</th>
+        <th>Puan</th>
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-team>
+      <tr
+        [ngClass]="{ 'eliminated': championChances.get(team.id) === 0 }"
+        [title]="championChances.get(team.id) === 0 ? 'Şampiyonluk şansı kalmadı' : ''"
+      >
+        <td>{{ team.name }}</td>
+        <td>{{ team.matchesPlayed }}</td>
+        <td>{{ team.wins }}</td>
+        <td>{{ team.draws }}</td>
+        <td>{{ team.losses }}</td>
+        <td>{{ team.goalDifference }}</td>
+        <td>{{ team.points }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+<!-- Şampiyonluk Tahminleri -->
 <div *ngIf="championPredictions$ | async as predictions">
-  <h3>{{ currentWeek }}. Hafta Şampiyonluk Tahminleri</h3>
-  <p-table [value]="predictions">
+  <h3 class="section-title">{{ currentWeek }}. Hafta Şampiyonluk Tahminleri</h3>
+  <p-table [value]="predictions" class="prediction-table">
     <ng-template pTemplate="header">
       <tr>
         <th>Takım</th>
@@ -59,32 +69,29 @@
   </p-table>
 </div>
 
-<h3 class="mt-4">Oynanmış Maçları Düzenle</h3>
-
-<div *ngIf="editableMatches$ | async as matches">
-  <div
-    *ngFor="let match of matches"
-    style="margin-bottom: 10px; display: flex; align-items: center"
-  >
-    <span style="width: 140px">{{ getTeamName(match.homeTeamId) }}</span>
+<!-- Oynanmış Maçlar Edit Alanı -->
+<h3 class="section-title mt-4">Oynanmış Maçları Düzenle</h3>
+<div *ngIf="editableMatches$ | async as matches" class="editable-matches">
+  <div *ngFor="let match of matches" class="match-edit-row">
+    <span class="team-name">{{ getTeamName(match.homeTeamId) }}</span>
 
     <input
       type="number"
       [(ngModel)]="match.homeGoals"
-      style="width: 40px; text-align: center"
+      class="score-input"
       min="0"
     />
 
-    <span style="margin: 0 8px">-</span>
+    <span class="dash">-</span>
 
     <input
       type="number"
       [(ngModel)]="match.awayGoals"
-      style="width: 40px; text-align: center"
+      class="score-input"
       min="0"
     />
 
-    <span style="width: 140px; margin-left: 8px">{{ getTeamName(match.awayTeamId) }}</span>
+    <span class="team-name">{{ getTeamName(match.awayTeamId) }}</span>
 
     <button
       pButton
